package com.udacity.project4

import android.app.Activity
import android.app.Application
import android.app.PendingIntent.getActivity
import android.os.Bundle
import android.view.View
import androidx.fragment.app.testing.launchFragmentInContainer
import androidx.navigation.NavController
import androidx.navigation.Navigation
import androidx.test.core.app.ActivityScenario
import androidx.test.core.app.ApplicationProvider.getApplicationContext
import androidx.test.espresso.Espresso
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.IdlingRegistry
import androidx.test.espresso.action.ViewActions
import androidx.test.espresso.action.ViewActions.*
import androidx.test.espresso.assertion.ViewAssertions
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.matcher.RootMatchers
import androidx.test.espresso.matcher.RootMatchers.withDecorView
import androidx.test.espresso.matcher.ViewMatchers
import androidx.test.espresso.matcher.ViewMatchers.*
import androidx.test.ext.junit.rules.ActivityScenarioRule
import androidx.test.ext.junit.runners.AndroidJUnit4
import androidx.test.filters.LargeTest
import androidx.test.rule.GrantPermissionRule
import com.udacity.project4.locationreminders.RemindersActivity
import com.udacity.project4.locationreminders.data.ReminderDataSource
import com.udacity.project4.locationreminders.data.dto.ReminderDTO
import com.udacity.project4.locationreminders.data.local.LocalDB
import com.udacity.project4.locationreminders.data.local.RemindersLocalRepository
import com.udacity.project4.locationreminders.reminderslist.ReminderListFragment
import com.udacity.project4.locationreminders.reminderslist.ReminderListFragmentDirections
import com.udacity.project4.locationreminders.reminderslist.RemindersListViewModel
import com.udacity.project4.locationreminders.savereminder.SaveReminderViewModel
import com.udacity.project4.util.DataBindingIdlingResource
import com.udacity.project4.util.monitorActivity
import com.udacity.project4.util.monitorFragment
import com.udacity.project4.utils.EspressoIdlingResource
import kotlinx.coroutines.runBlocking
import kotlinx.coroutines.test.runBlockingTest
import org.hamcrest.CoreMatchers
import org.hamcrest.CoreMatchers.`is`
import org.hamcrest.CoreMatchers.not
import org.junit.After
import org.junit.Before
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith
import org.koin.androidx.viewmodel.dsl.viewModel
import org.koin.core.context.startKoin
import org.koin.core.context.stopKoin
import org.koin.dsl.module
import org.koin.test.AutoCloseKoinTest
import org.koin.test.get
import org.mockito.Mockito

@RunWith(AndroidJUnit4::class)
@LargeTest
//END TO END test to black box test the app
class RemindersActivityTest :
    AutoCloseKoinTest() {// Extended Koin Test - embed autoclose @after method to close Koin after every test

    @Rule
    @JvmField
    var permissionrule: GrantPermissionRule = GrantPermissionRule.grant("android.permission.ACCESS_FINE_LOCATION")
    var permissionrule2: GrantPermissionRule = GrantPermissionRule.grant("android.permission.ACCESS_BACKGROUND_LOCATION")

    lateinit var decorView: View

    @get:Rule
    val activityScenarioRule: ActivityScenarioRule<RemindersActivity> =
        ActivityScenarioRule<RemindersActivity>(RemindersActivity::class.java)

    @Before
    fun setUpToast() {
        activityScenarioRule.getScenario().onActivity(ActivityScenario.ActivityAction {
            decorView = it.getWindow().getDecorView()
        })
    }

    private lateinit var repository: ReminderDataSource
    private lateinit var appContext: Application
    private val reminder1 = ReminderDTO("Title1", "Description1", "location1", 0.0, 0.0)
    private val reminder2 = ReminderDTO("Title2", "Description2", "location2", 1.0, 1.0)
    //An Idling Resource that waits for Data Binding to Have no pending bindings.
    private val dataBindingIdlingResource= DataBindingIdlingResource()
    /**
     * As we use Koin as a Service Locator Library to develop our code, we'll also use Koin to test our code.
     * at this step we will initialize Koin related code to be able to use it in out testing.
     */
    @Before
    fun init() {
        stopKoin()//stop the original app koin
        appContext = getApplicationContext()
        val myModule = module {
            viewModel {
                RemindersListViewModel(
                    appContext,
                    get() as ReminderDataSource
                )
            }
            single {
                SaveReminderViewModel(
                    appContext,
                    get() as ReminderDataSource
                )
            }
            single { RemindersLocalRepository(get()) as ReminderDataSource }
            single { LocalDB.createRemindersDao(appContext) }
        }
        //declare a new koin module
        startKoin {
            modules(listOf(myModule))
        }
        //Get our real repository
        repository = get()

        //clear the data to start fresh
        runBlocking {
            repository.deleteAllReminders()
        }
    }

//    @Before
//    fun registerIdlingResource() {
//        IdlingRegistry.getInstance().register(dataBindingIdlingResource)
//        IdlingRegistry.getInstance().register(EspressoIdlingResource.countingIdlingResource)
//    }
//    @After
//    fun unregisterIdlingResource() {
//        IdlingRegistry.getInstance().unregister(dataBindingIdlingResource)
//        IdlingRegistry.getInstance().register(EspressoIdlingResource.countingIdlingResource)
//    }

    @Before
    fun registerIdlingResource(): Unit = IdlingRegistry.getInstance().run {
        register(EspressoIdlingResource.countingIdlingResource)
        register(dataBindingIdlingResource)
    }

    @After
    fun unregisterIdlingResource(): Unit = IdlingRegistry.getInstance().run {
        unregister(EspressoIdlingResource.countingIdlingResource)
        unregister(dataBindingIdlingResource)
    }

    @Test
    fun endtoendtest ()= runBlocking{

        //run end to end test using espresso and mockito?

        // open activity, login activity is not part of test

            val activityscenario = ActivityScenario.launch(RemindersActivity::class.java)

       dataBindingIdlingResource.monitorActivity(activityscenario)
        //dataBindingIdlingResource.monitorFragment(activityscenario)
            //confirm no data
        onView(withText("No Data")).check(ViewAssertions.matches(ViewMatchers.isDisplayed()))

            //click add reminder
        onView(withId(R.id.addReminderFAB)).perform(click())

        // testing if snackbar shows up with no data
           //click save reminder
        onView(withId(R.id.saveReminder)).perform(click())
        onView(withId(R.id.snackbar_text)).check(matches(withText(R.string.err_enter_title)))
        //onView(withText(R.string.err_enter_title)).check(matches(isDisplayed()));

        //select location click
        onView(withId(R.id.selectLocation)).perform(click())

        //pick map location, this should navigate back to other screen
        onView(withId(R.id.map)).perform(longClick())

        //add title and description
        onView(withId(R.id.reminderTitle)).perform(replaceText(reminder1.title))
        onView(withId(R.id.reminderDescription)).perform(replaceText(reminder1.description))
        closeSoftKeyboard()


        Thread.sleep(1000)
        //save reminder
        onView(withId(R.id.saveReminder)).perform(click())

        //checking toast

        //Thread.sleep(500)
         onView(withText(R.string.reminder_saved)).inRoot(withDecorView(not(decorView))).check(matches(isDisplayed()))



        //confirm reminder got saved
        onView(withText(reminder1.title)).check(matches(isDisplayed()))
        onView(withText(reminder1.description)).check(matches(isDisplayed()))

        //cool

        //check geofence
        

        activityscenario.close()
    }




}
